--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "antd": "^5.24.4",
     "next": "15.2.3",
     "react": "^19.0.0",
